# beatnik

./: .gitignore  .gitmodules  CMakeLists.txt  DESIGN.md  LICENSE  PROJECTS.md  README.md  run_cmake.sh
cmake/: FindNuMesh.cmake  Findnumesh.cmake
configs/: README.md
configs/llnl/: lassen.lsf
configs/llnl/lassen/: beatnik.lsf  spack.yaml
configs/llnl/quartz/: beatnik.slurm
configs/llnl/tioga/: beatnik.flux  spack.yaml
configs/unm/: README.md  hopper.slurm  spack-hopper.yaml  spack-wheeler.yaml  spack-xena.yaml  test-hopper.slurm  test-wheeler.slurm  test-xena.slurm  upstreams.yaml
configs/unm-hopper/: spack.yaml  test.slurm
configs/unm/hopper/: hopper.slurm
configs/unm/wheeler/: wheeler.slurm
examples/: CMakeLists.txt  risingbubble.cpp  rocketrig.cpp
src/: ArtificialViscosity.hpp  BRSolverBase.hpp  Beatnik_Array.hpp  Beatnik_ArrayUtils.hpp  Beatnik_Config.hpp.in  Beatnik_Types.hpp  BoundaryCondition.hpp  CMakeLists.txt  Cajita_IndexConversion_Edits.hpp  CreateBRSolver.hpp  CreateMesh.hpp  CutoffBRSolver.hpp  ExactBRSolver.hpp  HaloComm.hpp  Mesh.cpp  Mesh.hpp  MeshBase.hpp  Migration.hpp  Migrator.hpp  MigratorUtilities.hpp  Operators.hpp  PROJECTS.md  ProblemManager.cpp  ProblemManager.hpp  PvfmmBRSolver.hpp  Redistributer.hpp  SiloWriter.hpp  SiloWriterUnstructured.hpp  Solver.hpp  SpatialMesh.hpp  StructuredMesh.hpp  SurfaceMesh.hpp  TimeIntegrator.hpp  UnstructuredMesh.hpp  VTKWriter.hpp  ZModel.hpp
tests/: CMakeLists.txt  TestRocketrig.hpp  TestingBase.hpp  TestingStructs.hpp  TestingUtils.hpp  tstBoundaryCondition.cpp  tstBoundaryCondition.hpp  tstCutoffBRSolver.cpp  tstCutoffBRSolver.hpp  tstCutoffSolver.cpp  tstCutoffSolver.hpp  tstDriver.hpp  tstExactBRSolver.cpp  tstExactBRSolver.hpp  tstExactBRSolverCorrect.hpp  tstMesh.cpp  tstMesh.hpp  tstProblemManager.cpp  tstProblemManager.hpp  tstSolver.cpp  tstSolver.hpp  tstTimeIntegrator.cpp  tstTimeIntegrator.hpp  tstZModel.cpp  tstZModel.hpp
tests-BRSolver/: CMakeLists.txt  test_zdot.cpp
tests/views/: README.md  w_orig_n32_r0.view  z_orig_n32_r0.view
tests/views/high_order/cutoff/comm-size-16/: w_64_f_r0.16.view  w_64_f_r1.16.view  w_64_f_r10.16.view  w_64_f_r11.16.view  w_64_f_r12.16.view  w_64_f_r13.16.view  w_64_f_r14.16.view  w_64_f_r15.16.view  w_64_f_r2.16.view  w_64_f_r3.16.view  w_64_f_r4.16.view  w_64_f_r5.16.view  w_64_f_r6.16.view  w_64_f_r7.16.view  w_64_f_r8.16.view  w_64_f_r9.16.view  w_64_p_r0.16.view  w_64_p_r1.16.view  w_64_p_r10.16.view  w_64_p_r11.16.view  w_64_p_r12.16.view  w_64_p_r13.16.view  w_64_p_r14.16.view  w_64_p_r15.16.view  w_64_p_r2.16.view  w_64_p_r3.16.view  w_64_p_r4.16.view  w_64_p_r5.16.view  w_64_p_r6.16.view  w_64_p_r7.16.view  w_64_p_r8.16.view  w_64_p_r9.16.view  z_64_f_r0.16.view  z_64_f_r1.16.view  z_64_f_r10.16.view  z_64_f_r11.16.view  z_64_f_r12.16.view  z_64_f_r13.16.view  z_64_f_r14.16.view  z_64_f_r15.16.view  (+24 more)
tests/views/high_order/cutoff/comm-size-4/: w_64_f_r0.4.view  w_64_f_r1.4.view  w_64_f_r2.4.view  w_64_f_r3.4.view  w_64_p_r0.4.view  w_64_p_r1.4.view  w_64_p_r2.4.view  w_64_p_r3.4.view  z_64_f_r0.4.view  z_64_f_r1.4.view  z_64_f_r2.4.view  z_64_f_r3.4.view  z_64_p_r0.4.view  z_64_p_r1.4.view  z_64_p_r2.4.view  z_64_p_r3.4.view
tests/views/high_order/exact/comm-size-1/: w_64_f_r0.1.view  w_64_p_r0.1.view  z_64_f_r0.1.view  z_64_p_r0.1.view
tests/views/high_order/exact/comm-size-16/: w_64_f_r0.16.view  w_64_f_r1.16.view  w_64_f_r10.16.view  w_64_f_r11.16.view  w_64_f_r12.16.view  w_64_f_r13.16.view  w_64_f_r14.16.view  w_64_f_r15.16.view  w_64_f_r2.16.view  w_64_f_r3.16.view  w_64_f_r4.16.view  w_64_f_r5.16.view  w_64_f_r6.16.view  w_64_f_r7.16.view  w_64_f_r8.16.view  w_64_f_r9.16.view  w_64_p_r0.16.view  w_64_p_r1.16.view  w_64_p_r10.16.view  w_64_p_r11.16.view  w_64_p_r12.16.view  w_64_p_r13.16.view  w_64_p_r14.16.view  w_64_p_r15.16.view  w_64_p_r2.16.view  w_64_p_r3.16.view  w_64_p_r4.16.view  w_64_p_r5.16.view  w_64_p_r6.16.view  w_64_p_r7.16.view  w_64_p_r8.16.view  w_64_p_r9.16.view  z_64_f_r0.16.view  z_64_f_r1.16.view  z_64_f_r10.16.view  z_64_f_r11.16.view  z_64_f_r12.16.view  z_64_f_r13.16.view  z_64_f_r14.16.view  z_64_f_r15.16.view  (+24 more)
tests/views/high_order/exact/comm-size-4/: w_64_f_r0.4.view  w_64_f_r1.4.view  w_64_f_r2.4.view  w_64_f_r3.4.view  w_64_p_r0.4.view  w_64_p_r1.4.view  w_64_p_r2.4.view  w_64_p_r3.4.view  z_64_f_r0.4.view  z_64_f_r1.4.view  z_64_f_r2.4.view  z_64_f_r3.4.view  z_64_p_r0.4.view  z_64_p_r1.4.view  z_64_p_r2.4.view  z_64_p_r3.4.view
tests/views/low_order/comm-size-1/: w_64_f_r0.1.view  w_64_p_r0.1.view  z_64_f_r0.1.view  z_64_p_r0.1.view
tests/views/low_order/comm-size-16/: w_64_f_r0.16.view  w_64_f_r1.16.view  w_64_f_r10.16.view  w_64_f_r11.16.view  w_64_f_r12.16.view  w_64_f_r13.16.view  w_64_f_r14.16.view  w_64_f_r15.16.view  w_64_f_r2.16.view  w_64_f_r3.16.view  w_64_f_r4.16.view  w_64_f_r5.16.view  w_64_f_r6.16.view  w_64_f_r7.16.view  w_64_f_r8.16.view  w_64_f_r9.16.view  w_64_p_r0.16.view  w_64_p_r1.16.view  w_64_p_r10.16.view  w_64_p_r11.16.view  w_64_p_r12.16.view  w_64_p_r13.16.view  w_64_p_r14.16.view  w_64_p_r15.16.view  w_64_p_r2.16.view  w_64_p_r3.16.view  w_64_p_r4.16.view  w_64_p_r5.16.view  w_64_p_r6.16.view  w_64_p_r7.16.view  w_64_p_r8.16.view  w_64_p_r9.16.view  z_64_f_r0.16.view  z_64_f_r1.16.view  z_64_f_r10.16.view  z_64_f_r11.16.view  z_64_f_r12.16.view  z_64_f_r13.16.view  z_64_f_r14.16.view  z_64_f_r15.16.view  (+24 more)
tests/views/low_order/comm-size-4/: w_64_f_r0.4.view  w_64_f_r1.4.view  w_64_f_r2.4.view  w_64_f_r3.4.view  w_64_p_r0.4.view  w_64_p_r1.4.view  w_64_p_r2.4.view  w_64_p_r3.4.view  z_64_f_r0.4.view  z_64_f_r1.4.view  z_64_f_r2.4.view  z_64_f_r3.4.view  z_64_p_r0.4.view  z_64_p_r1.4.view  z_64_p_r2.4.view  z_64_p_r3.4.view
